屏蔽部分无用代码

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,9 +54,9 @@
         <activity
             android:name=".CounterActivity"
             android:screenOrientation="portrait" />
-        <activity
-            android:name=".WebActivity"
-            android:screenOrientation="portrait" />
+        <!--<activity-->
+            <!--android:name=".WebActivity"-->
+            <!--android:screenOrientation="portrait" />-->
         <activity
             android:name=".QrCodeActivity"
             android:screenOrientation="portrait" />
